--- a/public/dev/css/index.css
+++ b/public/dev/css/index.css
@@ -1,6 +1,6 @@
 body {
     background-color: #fff;
-    color: #f00;
-    font-size: 10px;
+    color: #ff0;
+    font-size: 30px;
     background-image: url('../images/avatar.png');
 }
