--- a/public/dev/css/index.css
+++ b/public/dev/css/index.css
@@ -1,6 +1,5 @@
 body {
     background-color: #fff;
-    color: #ff0;
-    font-size: 30px;
-    background-image: url('../images/avatar.png');
+    color: #f00;
+    font-size: 20px;
 }
