--- a/public/dev/css/page/index.css
+++ b/public/dev/css/page/index.css
@@ -1,7 +1,7 @@
+/* 首页，入口 */
 body {
     background-color: #fff;
-    color: #000;
-    font-size: 20px;
+    color: #333;
 }
 p {
     text-align: left;
